B端-菜单+面包屑

--- a/技术框架.md
+++ b/技术框架.md
@@ -1,22 +1,30 @@
-Vue
-
-Vue Router
-
-Vuex
-
-Axios
-
-
-
-Vue-cli
-
-eslint
-
-
-
-ELementUI
-
-Vant
+> - Vue
+>
+> - Vue Router
+>
+> - Vuex
+>
+> - Axios
+>
+> - Mock.js
+>
+>   
+>
+> - Vue-cli
+>
+> - eslint
+>
+>   
+>
+> - ELementUI
+>
+> - Vant
+>
+>   
+>
+> - v-chart
+>
+> - 
 
 
 
